--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,6 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.1.0'
 
     /* text recognition */
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
+//    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
+    implementation 'com.google.mlkit:text-recognition-korean:16.0.0-beta3'
 }
