--- a/lib_task_api/build.gradle
+++ b/lib_task_api/build.gradle
@@ -39,5 +39,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.1.0'
- }
+//    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.1.0'
+    // https://github.com/tensorflow/tensorflow/issues/52194
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.0.0-nightly-SNAPSHOT'
+
+}
